--- a/index.html
+++ b/index.html
@@ -1,131 +1,174 @@
-
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
+
 <head>
-  <meta charset="UTF-8" />
-  <title>Mapa Interativo - Ambev</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link
-    rel="stylesheet"
-    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-    crossorigin=""
-  />
-  <style>
-    body { margin: 0; padding: 0; font-family: sans-serif; }
-    #map { height: 100vh; width: 100vw; }
-    .menu-suspenso {
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      background: white;
-      padding: 10px;
-      border-radius: 8px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-      z-index: 1000;
-    }
-    .menu-suspenso label { display: block; margin-top: 5px; }
-    .menu-suspenso select { width: 180px; }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mapa Interativo ASCD</title>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+    <style>
+        body {
+            margin: 0;
+            font-family: 'Inter', sans-serif;
+        }
+
+        #map {
+            height: 100vh;
+            width: 100vw;
+        }
+
+        .custom-controls {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            z-index: 1000;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+        }
+
+        select {
+            padding: 5px 8px;
+            font-size: 14px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            background-color: rgba(255, 255, 255, 0.8);
+            min-width: 160px;
+        }
+
+        .legend {
+            position: absolute;
+            bottom: 10px;
+            left: 10px;
+            background-color: rgba(255, 255, 255, 0.85);
+            padding: 8px;
+            border-radius: 5px;
+            font-size: 13px;
+        }
+
+        .legend div {
+            display: flex;
+            align-items: center;
+            margin-bottom: 4px;
+        }
+
+        .legend span {
+            display: inline-block;
+            width: 14px;
+            height: 14px;
+            margin-right: 6px;
+            border-radius: 50%;
+        }
+
+        .dia-segunda { background: #1f77b4; }
+        .dia-terca { background: #ff7f0e; }
+        .dia-quarta { background: #2ca02c; }
+        .dia-quinta { background: #d62728; }
+        .dia-sexta { background: #9467bd; }
+        .dia-sabado { background: #8c564b; }
+        .agenda { background: #17becf; }
+    </style>
 </head>
+
 <body>
-  <div class="menu-suspenso">
-    <label for="selectCDD">Selecionar CDD:</label>
-    <select id="selectCDD" multiple size="6" onchange="filtrarCamadas()">
-      <option value="">Todos</option>
-    </select>
+    <div id="map"></div>
+    <div class="custom-controls">
+        <select id="select-cdd">
+            <option value="">Escolha o CDD</option>
+        </select>
+        <select id="select-camada">
+            <option value="">Tipo de camada</option>
+            <option value="total">Total</option>
+            <option value="segunda">Segunda</option>
+            <option value="terca">Terça</option>
+            <option value="quarta">Quarta</option>
+            <option value="quinta">Quinta</option>
+            <option value="sexta">Sexta</option>
+            <option value="sabado">Sábado</option>
+            <option value="agenda">Agenda</option>
+        </select>
+        <select id="select-inplant">
+            <option value="">Filtrar por Inplant</option>
+        </select>
+        <select id="select-gn">
+            <option value="">Filtrar por GN</option>
+        </select>
+    </div>
 
-    <label for="selectCamada">Selecionar Camada:</label>
-    <select id="selectCamada" multiple size="6" onchange="filtrarCamadas()">
-      <option value="">Todas</option>
-      <option value="total">Total</option>
-      <option value="segunda">Segunda</option>
-      <option value="terça">Terça</option>
-      <option value="quarta">Quarta</option>
-      <option value="quinta">Quinta</option>
-      <option value="sexta">Sexta</option>
-      <option value="sábado">Sábado</option>
-      <option value="agenda">Agenda</option>
-    </select>
+    <div class="legend">
+        <div><span class="dia-segunda"></span> Segunda</div>
+        <div><span class="dia-terca"></span> Terça</div>
+        <div><span class="dia-quarta"></span> Quarta</div>
+        <div><span class="dia-quinta"></span> Quinta</div>
+        <div><span class="dia-sexta"></span> Sexta</div>
+        <div><span class="dia-sabado"></span> Sábado</div>
+        <div><span class="agenda"></span> Agenda</div>
+    </div>
 
-    <label for="selectInplant">Selecionar Inplant:</label>
-    <select id="selectInplant" multiple size="6" onchange="filtrarCamadas()">
-      <option value="">Todos</option>
-    </select>
-  </div>
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+    <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
+    <script>
+        const map = L.map('map').setView([-15.8, -47.9], 4);
 
-  <div id="map"></div>
+        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+            attribution: '© OpenStreetMap contributors'
+        }).addTo(map);
 
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" crossorigin=""></script>
+        const camadas = {};
 
-  <script>
-    var map = L.map('map').setView([-15.78, -47.93], 4);
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
+        // Exemplo para adicionar marcadores: ajuste com dados reais
+        const dados = [
+            { nome: 'PDV 1', lat: -15.8, lon: -47.9, cdd: 'CDD GAM', dia: 'segunda', inplant: 'Maria', gn: 'GN A', tipo: 'agenda' },
+            { nome: 'PDV 2', lat: -15.9, lon: -47.95, cdd: 'CDD GAM', dia: 'terca', inplant: 'Renato', gn: 'GN A', tipo: 'dia_de_rota' }
+        ];
 
-    function filtrarCamadas() {
-      const selectedCDDs = Array.from(document.getElementById("selectCDD").selectedOptions);
-      const cdds = selectedCDDs.map(opt => opt.value.toLowerCase());
-      const selectedCamadas = Array.from(document.getElementById("selectCamada").selectedOptions);
-      const camadas = selectedCamadas.map(opt => opt.value.toLowerCase());
-      const selectedOptions = Array.from(document.getElementById("selectInplant").selectedOptions);
-      const inplants = selectedOptions.map(opt => opt.value.toLowerCase());
+        function atualizarFiltros() {
+            const cdd = document.getElementById('select-cdd').value;
+            const camada = document.getElementById('select-camada').value;
+            const inplant = document.getElementById('select-inplant').value;
+            const gn = document.getElementById('select-gn').value;
 
-      document.querySelectorAll('.leaflet-control-layers-overlays input').forEach(input => {
-        const label = input.nextSibling.textContent.toLowerCase();
-        const matchCDD = cdds.length === 0 || cdds.some(cd => label.includes(cd));
-        const matchCamada = camadas.length === 0 || camadas.some(cm => label.includes(cm));
-        const matchInplant = inplants.length === 0 || inplants.some(ip => label.includes(ip));
+            for (const key in camadas) {
+                map.removeLayer(camadas[key]);
+            }
 
-        const shouldShow = matchCDD && matchCamada && matchInplant;
-        if (input.checked !== shouldShow) {
-          input.checked = shouldShow;
-          input.dispatchEvent(new Event('click'));
+            dados.filter(pdv =>
+                (!cdd || pdv.cdd === cdd) &&
+                (!camada || camada === 'total' || pdv.dia === camada || (camada === 'agenda' && pdv.tipo === 'agenda')) &&
+                (!inplant || pdv.inplant === inplant) &&
+                (!gn || pdv.gn === gn)
+            ).forEach(pdv => {
+                const cor = pdv.tipo === 'agenda' ? '#17becf' :
+                    pdv.dia === 'segunda' ? '#1f77b4' :
+                    pdv.dia === 'terca' ? '#ff7f0e' :
+                    pdv.dia === 'quarta' ? '#2ca02c' :
+                    pdv.dia === 'quinta' ? '#d62728' :
+                    pdv.dia === 'sexta' ? '#9467bd' :
+                    pdv.dia === 'sabado' ? '#8c564b' : '#999';
+
+                const marker = L.circleMarker([pdv.lat, pdv.lon], {
+                    radius: 6,
+                    fillColor: cor,
+                    color: '#000',
+                    weight: 1,
+                    opacity: 1,
+                    fillOpacity: 0.9
+                }).bindPopup(`<b>${pdv.nome}</b><br>${pdv.cdd}<br>${pdv.inplant}`);
+
+                marker.addTo(map);
+            });
         }
-      });
-    }
 
-    async function carregarSelectsDinamicos() {
-      const url = "https://raw.githubusercontent.com/marianarizzo/siteambev/main/Planner%20ASCD%20CO.csv";
-      try {
-        const resposta = await fetch(url);
-        const texto = await resposta.text();
-        const linhas = texto.split("\n");
-        const cabecalhos = linhas[0].split(",");
-        const indiceCDD = cabecalhos.indexOf("CDD");
-        const indiceInplant = cabecalhos.indexOf("Inplant");
+        document.getElementById('select-cdd').addEventListener('change', atualizarFiltros);
+        document.getElementById('select-camada').addEventListener('change', atualizarFiltros);
+        document.getElementById('select-inplant').addEventListener('change', atualizarFiltros);
+        document.getElementById('select-gn').addEventListener('change', atualizarFiltros);
 
-        const setCDDs = new Set();
-        const setInplants = new Set();
-
-        for (let i = 1; i < linhas.length; i++) {
-          const colunas = linhas[i].split(",");
-          const cdd = colunas[indiceCDD]?.trim();
-          const inplant = colunas[indiceInplant]?.trim();
-          if (cdd) setCDDs.add(cdd);
-          if (inplant) setInplants.add(inplant);
-        }
-
-        const selectCDD = document.getElementById("selectCDD");
-        setCDDs.forEach(cdd => {
-          const option = document.createElement("option");
-          option.value = cdd;
-          option.text = cdd;
-          selectCDD.appendChild(option);
-        });
-
-        const selectInplant = document.getElementById("selectInplant");
-        setInplants.forEach(ip => {
-          const option = document.createElement("option");
-          option.value = ip;
-          option.text = ip;
-          selectInplant.appendChild(option);
-        });
-
-      } catch (erro) {
-        console.error("Erro ao carregar os dados:", erro);
-      }
-    }
-
-    carregarSelectsDinamicos();
-  </script>
+        atualizarFiltros();
+    </script>
 </body>
+
 </html>
+
