--- a/index.html
+++ b/index.html
@@ -1,174 +1,166 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mapa Interativo ASCD</title>
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
-    <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
-    <style>
-        body {
-            margin: 0;
-            font-family: 'Inter', sans-serif;
-        }
-
-        #map {
-            height: 100vh;
-            width: 100vw;
-        }
-
-        .custom-controls {
-            position: absolute;
-            top: 10px;
-            left: 10px;
-            z-index: 1000;
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-        }
-
-        select {
-            padding: 5px 8px;
-            font-size: 14px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            background-color: rgba(255, 255, 255, 0.8);
-            min-width: 160px;
-        }
-
-        .legend {
-            position: absolute;
-            bottom: 10px;
-            left: 10px;
-            background-color: rgba(255, 255, 255, 0.85);
-            padding: 8px;
-            border-radius: 5px;
-            font-size: 13px;
-        }
-
-        .legend div {
-            display: flex;
-            align-items: center;
-            margin-bottom: 4px;
-        }
-
-        .legend span {
-            display: inline-block;
-            width: 14px;
-            height: 14px;
-            margin-right: 6px;
-            border-radius: 50%;
-        }
-
-        .dia-segunda { background: #1f77b4; }
-        .dia-terca { background: #ff7f0e; }
-        .dia-quarta { background: #2ca02c; }
-        .dia-quinta { background: #d62728; }
-        .dia-sexta { background: #9467bd; }
-        .dia-sabado { background: #8c564b; }
-        .agenda { background: #17becf; }
-    </style>
+  <meta charset="UTF-8" />
+  <title>Mapa Interativo Ambev</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
+  />
+  <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
+  <style>
+    #map {
+      height: 100vh;
+      width: 100%;
+    }
+    .control-panel {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      display: flex;
+      gap: 10px;
+      flex-wrap: wrap;
+      z-index: 1000;
+      background: transparent;
+    }
+    .control-panel select {
+      padding: 5px;
+      border-radius: 4px;
+    }
+    .legend {
+      position: absolute;
+      bottom: 10px;
+      left: 10px;
+      background: white;
+      padding: 5px 10px;
+      font-size: 14px;
+      border-radius: 5px;
+    }
+    .legend span {
+      margin-right: 10px;
+    }
+  </style>
 </head>
-
 <body>
-    <div id="map"></div>
-    <div class="custom-controls">
-        <select id="select-cdd">
-            <option value="">Escolha o CDD</option>
-        </select>
-        <select id="select-camada">
-            <option value="">Tipo de camada</option>
-            <option value="total">Total</option>
-            <option value="segunda">Segunda</option>
-            <option value="terca">Terça</option>
-            <option value="quarta">Quarta</option>
-            <option value="quinta">Quinta</option>
-            <option value="sexta">Sexta</option>
-            <option value="sabado">Sábado</option>
-            <option value="agenda">Agenda</option>
-        </select>
-        <select id="select-inplant">
-            <option value="">Filtrar por Inplant</option>
-        </select>
-        <select id="select-gn">
-            <option value="">Filtrar por GN</option>
-        </select>
-    </div>
+  <div id="map"></div>
+  <div class="control-panel">
+    <select id="cddFilter" multiple></select>
+    <select id="dayFilter" multiple>
+      <option value="Segunda">Segunda</option>
+      <option value="Terça">Terça</option>
+      <option value="Quarta">Quarta</option>
+      <option value="Quinta">Quinta</option>
+      <option value="Sexta">Sexta</option>
+      <option value="Sábado">Sábado</option>
+      <option value="Agenda">Agenda</option>
+    </select>
+    <select id="inplantFilter" multiple></select>
+    <select id="gnFilter" multiple></select>
+  </div>
 
-    <div class="legend">
-        <div><span class="dia-segunda"></span> Segunda</div>
-        <div><span class="dia-terca"></span> Terça</div>
-        <div><span class="dia-quarta"></span> Quarta</div>
-        <div><span class="dia-quinta"></span> Quinta</div>
-        <div><span class="dia-sexta"></span> Sexta</div>
-        <div><span class="dia-sabado"></span> Sábado</div>
-        <div><span class="agenda"></span> Agenda</div>
-    </div>
+  <div class="legend">
+    <strong>Legenda:</strong>
+    <span style="color: red;">● Agenda</span>
+    <span style="color: blue;">● Segunda</span>
+    <span style="color: green;">● Terça</span>
+    <span style="color: purple;">● Quarta</span>
+    <span style="color: brown;">● Quinta</span>
+    <span style="color: black;">● Sexta</span>
+    <span style="color: orange;">● Sábado</span>
+  </div>
 
-    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-    <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
-    <script>
-        const map = L.map('map').setView([-15.8, -47.9], 4);
+  <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.2/papaparse.min.js"></script>
+  <script>
+    const map = L.map("map").setView([-10.5, -52], 4);
+    L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
+      attribution: "&copy; OpenStreetMap contributors",
+    }).addTo(map);
 
-        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-            attribution: '© OpenStreetMap contributors'
-        }).addTo(map);
+    const layerGroup = L.layerGroup().addTo(map);
+    const colors = {
+      "Agenda": "red",
+      "Segunda": "blue",
+      "Terça": "green",
+      "Quarta": "purple",
+      "Quinta": "brown",
+      "Sexta": "black",
+      "Sábado": "orange"
+    };
 
-        const camadas = {};
+    function loadData() {
+      Papa.parse("https://raw.githubusercontent.com/marianarizzo/siteambev/main/Planner%20ASCD%20CO.csv", {
+        download: true,
+        header: true,
+        complete: function (results) {
+          const data = results.data;
+          populateFilters(data);
+          updateMap(data);
+          document.querySelectorAll(".control-panel select").forEach(sel => {
+            sel.addEventListener("change", () => updateMap(data));
+          });
+        },
+      });
+    }
 
-        // Exemplo para adicionar marcadores: ajuste com dados reais
-        const dados = [
-            { nome: 'PDV 1', lat: -15.8, lon: -47.9, cdd: 'CDD GAM', dia: 'segunda', inplant: 'Maria', gn: 'GN A', tipo: 'agenda' },
-            { nome: 'PDV 2', lat: -15.9, lon: -47.95, cdd: 'CDD GAM', dia: 'terca', inplant: 'Renato', gn: 'GN A', tipo: 'dia_de_rota' }
-        ];
+    function populateFilters(data) {
+      const cddSet = new Set();
+      const inplantSet = new Set();
+      const gnSet = new Set();
+      data.forEach(row => {
+        if (row.CDD) cddSet.add(row.CDD.trim());
+        if (row.Inplant) inplantSet.add(row.Inplant.trim());
+        if (row.GN) gnSet.add(row.GN.trim());
+      });
 
-        function atualizarFiltros() {
-            const cdd = document.getElementById('select-cdd').value;
-            const camada = document.getElementById('select-camada').value;
-            const inplant = document.getElementById('select-inplant').value;
-            const gn = document.getElementById('select-gn').value;
+      const cddFilter = document.getElementById("cddFilter");
+      const inplantFilter = document.getElementById("inplantFilter");
+      const gnFilter = document.getElementById("gnFilter");
 
-            for (const key in camadas) {
-                map.removeLayer(camadas[key]);
-            }
+      cddSet.forEach(val => cddFilter.add(new Option(val, val)));
+      inplantSet.forEach(val => inplantFilter.add(new Option(val, val)));
+      gnSet.forEach(val => gnFilter.add(new Option(val, val)));
+    }
 
-            dados.filter(pdv =>
-                (!cdd || pdv.cdd === cdd) &&
-                (!camada || camada === 'total' || pdv.dia === camada || (camada === 'agenda' && pdv.tipo === 'agenda')) &&
-                (!inplant || pdv.inplant === inplant) &&
-                (!gn || pdv.gn === gn)
-            ).forEach(pdv => {
-                const cor = pdv.tipo === 'agenda' ? '#17becf' :
-                    pdv.dia === 'segunda' ? '#1f77b4' :
-                    pdv.dia === 'terca' ? '#ff7f0e' :
-                    pdv.dia === 'quarta' ? '#2ca02c' :
-                    pdv.dia === 'quinta' ? '#d62728' :
-                    pdv.dia === 'sexta' ? '#9467bd' :
-                    pdv.dia === 'sabado' ? '#8c564b' : '#999';
+    function updateMap(data) {
+      layerGroup.clearLayers();
+      const selectedCDDs = getSelectedValues("cddFilter");
+      const selectedDays = getSelectedValues("dayFilter");
+      const selectedInplants = getSelectedValues("inplantFilter");
+      const selectedGNs = getSelectedValues("gnFilter");
 
-                const marker = L.circleMarker([pdv.lat, pdv.lon], {
-                    radius: 6,
-                    fillColor: cor,
-                    color: '#000',
-                    weight: 1,
-                    opacity: 1,
-                    fillOpacity: 0.9
-                }).bindPopup(`<b>${pdv.nome}</b><br>${pdv.cdd}<br>${pdv.inplant}`);
+      data.forEach(row => {
+        const lat = parseFloat(row.Lat);
+        const lon = parseFloat(row.Lng);
+        const dia = row["Dia de Rota"];
+        const cdd = row["CDD"];
+        const inplant = row["Inplant"];
+        const gn = row["GN"];
 
-                marker.addTo(map);
-            });
+        const diaValid = selectedDays.length === 0 || selectedDays.includes(dia);
+        const cddValid = selectedCDDs.length === 0 || selectedCDDs.includes(cdd);
+        const inplantValid = selectedInplants.length === 0 || selectedInplants.includes(inplant);
+        const gnValid = selectedGNs.length === 0 || selectedGNs.includes(gn);
+
+        if (lat && lon && diaValid && cddValid && inplantValid && gnValid) {
+          const color = colors[dia] || "gray";
+          const marker = L.circleMarker([lat, lon], {
+            radius: 8,
+            color: color,
+            fillOpacity: 0.8,
+          });
+          marker.bindPopup(`<strong>Loja:</strong> ${row.Loja}<br><strong>CDD:</strong> ${cdd}<br><strong>Dia:</strong> ${dia}`);
+          layerGroup.addLayer(marker);
         }
+      });
+    }
 
-        document.getElementById('select-cdd').addEventListener('change', atualizarFiltros);
-        document.getElementById('select-camada').addEventListener('change', atualizarFiltros);
-        document.getElementById('select-inplant').addEventListener('change', atualizarFiltros);
-        document.getElementById('select-gn').addEventListener('change', atualizarFiltros);
+    function getSelectedValues(selectId) {
+      const sel = document.getElementById(selectId);
+      return Array.from(sel.selectedOptions).map(o => o.value);
+    }
 
-        atualizarFiltros();
-    </script>
+    loadData();
+  </script>
 </body>
-
 </html>
-
