--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@ function toggleDropdown() {
 <option value="">Todos</option>
 <option value="total">Total</option>
 <option value="segunda">Segunda</option>
-<option value="terca">Terça</option>
+<option value="terca">Terca</option>
 <option value="quarta">Quarta</option>
 <option value="quinta">Quinta</option>
 <option value="sexta">Sexta</option>
-<option value="sabado">Sábado</option>
+<option value="sabado">Sabado</option>
 <option value="agenda">Agendado</option>
 </select>
 <label for="selectInplant">Filtrar por Inplant:</label><br/>
