--- a/index.html
+++ b/index.html
@@ -86,6 +86,15 @@ function toggleDropdown() {
 <label for="selectInplant">Filtrar por Inplant:</label><br/>
 <select id="selectInplant" multiple style="height: 2em;" onclick="this.size=this.options.length;" onblur="this.size=1;" onchange="filtrarCamadas()">
 <option value="">Todos</option>
+<option value="Maria Carolina Melo Veloso">Maria Carolina Melo Veloso</option>
+<option value="segunda">Segunda</option>
+<option value="Maísa Monteiro Alves">Maísa Monteiro Alves</option>
+<option value="Yasmin Rodrigues Araújo da Silva">Yasmin Rodrigues Araújo da Silva</option>
+<option value="Fabricia Da Silva Oliveira">Fabricia Da Silva Oliveira</option>
+<option value="Júlia Oliveira Sathler Garcia">Júlia Oliveira Sathler Garcia</option>
+<option value="Mariana Almeida Marques">Mariana Almeida Marques</option>
+<option value="Renato Bocardi">Renato Bocardi</option>
+<option value="Paulo Augusto Gama da Silva">Paulo Augusto Gama da Silva</option>
 </select><br/>
 
 </div>
