--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@ function toggleDropdown() {
 <option value="">Todos</option>
 <option value="total">Total</option>
 <option value="segunda">Segunda</option>
-<option value="Terca">Terca</option>
+<option value="terca">Terça</option>
 <option value="quarta">Quarta</option>
 <option value="quinta">Quinta</option>
 <option value="sexta">Sexta</option>
-<option value="Sabado">Sabado</option>
+<option value="sabado">Sábado</option>
 <option value="agenda">Agendado</option>
 </select>
 <label for="selectInplant">Filtrar por Inplant:</label><br/>
@@ -125,11 +125,11 @@ function toggleDropdown() {
 <b>Legenda de Cores</b>
 <span style="color:red">● Agenda</span>
 <span style="color:blue">● Segunda</span>
-<span style="color:green">● Terca</span>
+<span style="color:green">● Terça</span>
 <span style="color:purple">● Quarta</span>
 <span style="color:brown">● Quinta</span>
 <span style="color:black">● Sexta</span>
-<span style="color:orange">● Sabado</span>
+<span style="color:orange">● Sábado</span>
 <span style="color:darkorange">🔥 Heatmap: Densidade</span>
 </div>
 <div class="folium-map" id="map_3e957a8cffea5c02a02e3640cbb3ea47"></div>
